// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Journal Name Component test  should render with empty props 1`] = `<span />`;

exports[`Journal Name Component test  should render with journal article 1`] = `
<span>
  <Link
    replace={false}
    to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_journal_name%5D%5Bvalue%5D=Journal+of+Cell+Science&searchMode=advanced"
  >
    <span>
      Journal of Cell Science
    </span>
  </Link>
  <span
    className="eraYearListed"
  >
     
    (ERA 2010 Journal(s) Listed)
  </span>
  <span>
    <WithStyles(ExternalLink)
      aria-label="View publisher's open access policy in an new window"
      href="http://www.sherpa.ac.uk/romeo/search.php?issn=1477-9137"
    >
      <span
        className="sherpaRomeoGreen"
      >
        Check publisher's open access policy
      </span>
    </WithStyles(ExternalLink)>
  </span>
</span>
`;

exports[`Journal Name Component test  should render without era journal listed 1`] = `
<span>
  <Link
    replace={false}
    to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_journal_name%5D%5Bvalue%5D=Journal+of+Cell+Science&searchMode=advanced"
  >
    <span>
      Journal of Cell Science
    </span>
  </Link>
  <span>
    <WithStyles(ExternalLink)
      aria-label="View publisher's open access policy in an new window"
      href="http://www.sherpa.ac.uk/romeo/search.php?issn=1477-9137"
    >
      <span
        className="sherpaRomeoGreen"
      >
        Check publisher's open access policy
      </span>
    </WithStyles(ExternalLink)>
  </span>
</span>
`;

exports[`Journal Name Component test  should render without sherpa romeo 1`] = `
<span>
  <Link
    replace={false}
    to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_journal_name%5D%5Bvalue%5D=Journal+of+Cell+Science&searchMode=advanced"
  >
    <span>
      Journal of Cell Science
    </span>
  </Link>
  <span
    className="eraYearListed"
  >
     
    (ERA 2010 Journal(s) Listed)
  </span>
  <span />
</span>
`;
